kubernetes/apps/kube-system/cilium/policies/allow-media-apps.yaml
---
# Autobrr needs PostgreSQL access
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-autobrr-db-egress
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: autobrr
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
# Media apps need external egress for indexers, usenet, trackers
# Prowlarr, Sonarr, Radarr, Sabnzbd, Bazarr, Overseerr all fetch externally
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-media-external-egress
  namespace: media
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - prowlarr
          - sonarr
          - sonarr-uhd
          - radarr
          - radarr-uhd
          - bazarr
          - bazarr-uhd
          - sabnzbd
          - overseerr
          - kometa
          - recyclarr
          - posterizarr
          - tdarr
          - plex
  egress:
    # External APIs (indexers, usenet providers, metadata, etc.)
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
# Plex needs broad egress for streaming, metadata, auth
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-plex-egress
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "32400"
              protocol: TCP
