kubernetes/apps/kube-system/cilium/policies/default-deny-database.yaml
---
# Default deny all ingress to database namespace
# Only explicitly allowed clients can reach databases
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: database
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
